# auto_task

./: main.py  pyproject.toml  requiremets.txt
data/: empleo.csv  empleo.db  empleo.json  empleo.xlsx
src/: settings.py
src/core/utils/: bg_remover.py  converter.py  logger.py  repeated_files.py
src/utils/: bg_remover.py
src/views/: app.py  bg_view.py  converter_view.py  repeated_view.py
